fixed images getting cut off

--- a/assets/css/image.css
+++ b/assets/css/image.css
@@ -16,7 +16,10 @@ body
     width: 100%;
     height: 100%;
     position: relative;
- }
+    
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
  
 #headDiv
 {
@@ -89,8 +92,9 @@ img
 {
     display: block;
     margin: 0 auto;
-    height: 100%;
-
+    
+    max-height: 100%;
+    max-width: 100%;
 }
 
 #backImg
@@ -146,9 +150,10 @@ img
     -ms-user-select:none;
     user-select:none;
 
-    color: #fff!important;
-    background-color: #000!important;
-    font-size: 16px;
+    color: #fff;
+    background-color: #000;
+    opacity: 0.5;
+    font-size: 30pt;
 
     -webkit-appearance: button;
 
